style: corrected height of basket overflow

--- a/styles.css/basket.css
+++ b/styles.css/basket.css
@@ -190,5 +190,5 @@ aside {
 
 .basket_food_content {
     overflow: auto;
-    max-height: 550px;
+    max-height: calc(100dvh - 270px);
 }
